# python_django_diploma

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
DB/: db.sqlite3
diploma-frontend/: README.md
mysite/: requirements.txt
mysite/cart/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/cart/migrations/: 0001_initial.py  0002_cart_session_key.py  0003_remove_cart_session_key.py
mysite/cart/serializers/: cart_authenticatad_user_serializer.py  cart_not_authenticatad_user_serializer.py
mysite/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/catalog/fixtures/: catalog-fixture.json
mysite/catalog/migrations/: 0001_initial.py  0002_category_alt_category_src.py  0002_remove_category_category_id_category_parent.py  0002_review_alias.py  0003_alter_category_parent.py  0003_alter_category_src_alter_review_product.py  0003_remove_review_alias_review_user_alter_review_author.py  0004_alter_category_parent.py  0004_alter_tag_options.py  0004_review_email.py  0005_alter_category_parent_alter_product_category.py  0005_alter_specification_options.py  0006_alter_product_options.py  0006_category_level_category_lft_category_rght_and_more.py  (+1 more)
mysite/my_auth/: apps.py  serializers.py  signals.py  urls.py  views.py
mysite/mysite/: forms.py  settings.py  urls.py
mysite/order/: admin.py  models.py  serialisers.py  urls.py  views.py
mysite/payment/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/profiles/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+55 files in other folders)
