[tool.poetry]
name = "python-django-diploma"
version = "0.1.0"
description = ""
authors = ["Светлана Скобельцына <skobsvetlana@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
asgiref = "^3.8.1"
django-filter = "^24.1"
django-js-asset = "^2.2.0"
djangorestframework-recursive = "^0.1.2"
gunicorn = "^21.2.0"
packaging = "^24.0"
pillow = "^10.2.0"
pytz = "^2024.1"
sqlparse = "^0.4.4"
typing-extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
